force-app/main/default/objects/sfdo_grants__VerificationCheck__c/sfdo_grants__VerificationCheck__c.object-meta.xml
<CustomObject>
    <description>Tracks and stores the verification activity of a Document Checklist Item.</description>
    <label>Verification Check</label>
    <nameField>
        <label>Verification Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verification Checks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>