force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__Comments__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Comments__c</fullName>
    <description>Enter additional information about the Verification Check.</description>
    <inlineHelpText>Enter additional information about the Verification Check.</inlineHelpText>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>