force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__DateVerified__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__DateVerified__c</fullName>
    <description>The date the Verification Check was completed.</description>
    <inlineHelpText>The date the Verification Check was completed.</inlineHelpText>
    <label>Date Verified</label>
    <type>Date</type>
</CustomField>