force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__DocumentChecklistItem__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__DocumentChecklistItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Document Checklist Item associated with the Verification Check.</description>
    <inlineHelpText>Lookup to the Document Checklist Item associated with the Verification Check.</inlineHelpText>
    <label>Document Checklist Item</label>
    <referenceTo>DocumentChecklistItem</referenceTo>
    <relationshipLabel>Verification Checks</relationshipLabel>
    <relationshipName>VerificationChecks</relationshipName>
    <type>Lookup</type>
</CustomField>