force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__DocumentType__c</fullName>
    <description>Indicates the Document Checklist Item’s Document Type.</description>
    <formula>sfdo_grants__DocumentChecklistItem__r.DocumentType.DeveloperName</formula>
    <inlineHelpText>Indicates the Document Checklist Item’s Document Type.</inlineHelpText>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>