force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__EIN__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__EIN__c</fullName>
    <description>Selected EIN from tax status search results.</description>
    <label>EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>