force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__IRSSubsectionCode__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__IRSSubsectionCode__c</fullName>
    <description>Selected IRS Subsection Code for tax status search.</description>
    <label>IRS Subsection Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>