force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__MostRecentBMFDate__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__MostRecentBMFDate__c</fullName>
    <description>The date of the most recent IRS Business Master File for this organization as of the time this check was performed</description>
    <inlineHelpText>The date of the most recent IRS Business Master File for this organization as of the time this check was performed.</inlineHelpText>
    <label>Most Recent BMF Date</label>
    <type>Date</type>
</CustomField>