force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__RawTaxStatusSearchResults__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__RawTaxStatusSearchResults__c</fullName>
    <description>Displays the raw tax status search results from the API in JSON format.</description>
    <label>Raw Tax Status Search Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>