force-app/main/default/objects/sfdo_grants__VerificationCheck__c/fields/sfdo_grants__Status__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Status__c</fullName>
    <description>The status of a Verification Check.</description>
    <inlineHelpText>The status of a Verification Check.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>